feat: Add theme support to BufferDiffPanel and FilePanel